--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "animate.css": "^4.1.0",
     "bootstrap": "^4.5.2",
     "firebase": "^7.19.1",
+    "firesql": "^2.0.2",
     "formik": "^2.1.5",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
